force-app/main/default/objects/Waiver__c/Waiver__c.object-meta.xml
<CustomObject>
    <description>A signed liability waiver from the waiver index (Drive PDF).</description>
    <label>Waiver</label>
    <nameField>
        <displayFormat>W-{000000}</displayFormat>
        <label>Waiver Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>