force-app/main/default/objects/Waiver__c/fields/Drive_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Drive_File_Id__c</fullName>
    <description>Google Drive file id of the waiver PDF. Upsert key.</description>
    <label>Drive File Id</label>
    <externalId>true</externalId>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>