force-app/main/default/objects/Waiver__c/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <description>Set by deterministic code from the waiver policy, never by an agent.</description>
    <label>Expires On</label>
    <type>Date</type>
</CustomField>