force-app/main/default/objects/Waiver__c/fields/Signed_On__c.field-meta.xml
<CustomField>
    <fullName>Signed_On__c</fullName>
    <label>Signed On</label>
    <type>Date</type>
</CustomField>