force-app/main/default/objects/Waiver__c/fields/Square_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Square_Customer_Id__c</fullName>
    <description>Square customer id recorded in the waiver index.</description>
    <label>Square Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>