force-app/main/default/objects/Waiver__c/validationRules/Source_Refs_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_Refs_Required</fullName>
    <active>true</active>
    <description>Every non-native waiver carries a source URL; Drive waivers carry the file id.</description>
    <errorConditionFormula>OR(
    AND(NOT(ISPICKVAL(Source_System__c, "Salesforce")), ISBLANK(Source_URL__c)),
    AND(ISPICKVAL(Source_System__c, "Google Drive"), ISBLANK(Drive_File_Id__c))
)</errorConditionFormula>
    <errorDisplayField>Source_URL__c</errorDisplayField>
    <errorMessage>Source URL is required unless Source System is Salesforce, and Drive waivers need the Drive File Id.</errorMessage>
</ValidationRule>